<resources>
    <string name="app_name">时课教师端</string>

    <string name="LinearLayoutManager">LinearLayoutManager</string>
    <string name="GridLayoutManager">GridLayoutManager</string>
    <string name="StaggeredGridLayoutManager">StaggeredGridLayoutManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nickname">昵称</string>
    <string name="my_class">我的课程</string>
    <string name="my_file">我的文件</string>
    <string name="my_sign_in">我的签到</string>
    <string name="my_rank">签到排行榜</string>
    <string name="start_sign_in">开始\n签到</string>
    <string name="see_sign_in_list">查看签到表</string>

    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="sign_in">登录</string>
    <string name="shike">时课</string>
</resources>
